tree-sitter-duck/grammar.js
    source_file: $ => $.document,
    module_header: $ => seq("module", field("parameters", $.parameter_list), "where"),
    _statement: $ => choice($.effect_binding_statement, $.resume_dup_statement, $.prefix_signature_statement, $.prefix_fact_statement, $.prefix_unsafe_proof_statement, $.binding_statement, $.type_pattern_statement, $.return_statement, $.for_statement, $.break_statement, $.continue_statement, $.index_assignment, $.assignment, $.expression_statement),
    binding_statement: $ => seq(repeat(field("attribute", $.attribute_group)), choice(seq(field("kind", "let"), optional(field("recursive", "rec"))), seq(field("kind", "const"), optional(field("open", "open")))), optional(field("linear", "!")), field("name", $._binding_pattern), optional(seq(":", field("type", $.type_reference))), "=", field("value", $._expression), repeat(seq("and", field("mutual_name", $.identifier), optional(seq(":", field("mutual_type", $.type_reference))), "=", field("mutual_value", $._expression))), optional(seq("else", field("alternative", $.block))), ";"),
    effect_row: $ => $._effect_row_expression,
    _effect_row_expression: $ => choice($.effect_union_expression, $.effect_intersection_expression, $.effect_difference_expression, $.parenthesized_effect_expression, $.effect_family_reference, $.effect_row_variable, $.effect_operation_reference),
    effect_union_expression: $ => prec.left(1, seq(field("left", $._effect_row_expression), ":|", field("right", $._effect_row_expression))),
    effect_intersection_expression: $ => prec.left(2, seq(field("left", $._effect_row_expression), ":&", field("right", $._effect_row_expression))),
    effect_difference_expression: $ => prec.left(3, seq(field("left", $._effect_row_expression), ":-", field("right", $._effect_row_expression))),
    parenthesized_effect_expression: $ => seq("(", field("value", $._effect_row_expression), ")"),
    effect_family_reference: $ => field("effect", $.effect_identifier),
    effect_operation_reference: $ => seq(field("effect", $.effect_identifier), ".", field("operation", choice($.identifier, "end"))),
    effect_binding_statement: $ => seq(field("name", choice($.identifier, $._fixity_identifier_alias, $.wildcard, $.unit_pattern)), "<-", field("value", $._expression)),
    resume_dup_statement: $ => seq("let", "(", "!", field("left", $.identifier), ",", "!", field("right", $.identifier), ")", "=", "dup", field("value", $.linear_reference), ";"),
    unit_pattern: $ => seq("(", ")"),
    declare_effect_statement: $ => seq(repeat(field("attribute", $.attribute_group)), "declare", "effect", field("name", $.effect_identifier), field("operations", $.effect_operation_block)),
    effect_statement: $ => seq(repeat(field("attribute", $.attribute_group)), "effect", field("name", $.effect_identifier), repeat(field("parameter", $.identifier)), field("operations", $.effect_operation_block)),
    effect_operation_block: $ => seq("{", repeat(seq($.effect_operation, optional(","))), "}"),
    effect_operation: $ => seq(optional("suspending"), field("name", choice($.identifier, "end")), ":", optional(field("forall", $.effect_operation_forall)), field("parameters", $.host_parameter_list), "=>", field("result", $.host_result)),
    effect_operation_forall: $ => seq("forall", repeat1(field("parameter", $.identifier)), "."),
    declare_record_statement: $ => seq(repeat(field("attribute", $.attribute_group)), "declare", field("name", $.identifier), field("fields", $.type_field_block)),
    module_binding_statement: $ => seq(repeat(field("attribute", $.attribute_group)), "module", field("name", $.identifier), "=", field("value", $._expression)),
    host_parameter_list: $ => seq("(", optional(seq(seq($.host_parameter, repeat(seq(",", $.host_parameter))), optional(","))), ")"),
    host_parameter: $ => choice(seq(field("contract", choice("&", "#", "scalar")), field("type", $.type_reference)), field("type", $.type_reference)),
    host_result: $ => choice(seq(field("contract", choice("#", "scalar")), field("type", $.type_reference)), field("type", $.type_reference)),
    module_return_statement: $ => seq("return", field("exports", $.shape_value), ";"),
    assignment: $ => seq(field("name", choice($.identifier, $._fixity_identifier_alias)), field("operator", choice("=", ":=")), field("value", $._expression)),
    expression_statement: $ => $._expression,
    _expression: $ => choice($.try_with_expression, $.loop_expression, $.arrow_function, $.recursive_function, $.recursive_call_expression, $.if_expression, $.case_function_expression, $.case_expression, $.binary_expression, $.is_expression, $.as_expression, $.unary_expression, $.application_expression, $.postfix_expression, $.effect_handler_expression),
    try_with_expression: $ => prec.right(1, seq("try", field("body", $._expression), optional(seq("with", field("handler", $._expression))))),
    arrow_function: $ => choice($._shape_arrow, $._effect_arrow, $._value_arrow),
    parameter_list: $ => seq("(", optional(seq(seq($.parameter, repeat(seq(",", $.parameter))), optional(","))), ")"),
    parameter: $ => seq(optional(choice(seq("const", optional("...")), "!")), field("name", choice($.identifier, $._fixity_identifier_alias, $.wildcard)), optional(seq(":", field("type", $.type_reference)))),
    binary_expression: $ => prec.left(6, seq(field("left", $._expression), field("operator", $.operator_symbol), field("right", $._expression))),
    unary_expression: $ => prec.right(8, seq(field("operator", choice("!", "&", "freeze", "comptime", "perform", $.operator_symbol)), field("operand", $._expression))),
    _match_pattern: $ => choice($.alternative_pattern, $._single_match_pattern),
    _binding_pattern: $ => choice($._binding_alternative_pattern, $._single_binding_pattern),
    application_expression: $ => prec.left(9, seq(field("function", choice($.application_expression, $.postfix_expression)), $._application_space, field("argument", $.postfix_expression))),
    postfix_expression: $ => choice($.call_expression, $.field_expression, $.index_expression, $._primary_expression),
    field_expression: $ => prec.left(10, choice(seq(field("object", $.postfix_expression), ".", field("field", choice($.identifier, "end"))), seq(field("object", $._effect_identifier_alias), ".", field("field", choice($.identifier, "end"))))),
    effect_handler_expression: $ => seq("handler", field("effect", $.effect_identifier), field("clauses", $.handler_clause_block)),
    handler_clause_block: $ => seq("{", repeat(seq($.handler_operation_clause, optional(","))), $.handler_return_clause, optional(","), "}"),
    handler_operation_clause: $ => seq(field("name", choice($.identifier, "end")), ":", field("value", $.arrow_function)),
    handler_return_clause: $ => seq("return", ":", field("value", $.arrow_function)),
    _primary_expression: $ => choice($.prefix_by_proof_expression, $.number, $.string, $.character, $.template_literal, $.boolean, $.identifier, $._fixity_identifier_alias, $.wildcard, $._aggregate_constructor_identifier, $._effect_identifier_alias, $.intrinsic_identifier, $.atom_expression, $.import_meta_expression, $.import_expression, $.include_expression, $.named_product, $.positional_product, $.union_case, $.linear_reference, $.unit_pattern, $.array_expression, $.array_repeat_expression, $.shape_value, $.scratch_expression, $.block, $.parenthesized_expression),
    linear_reference: $ => seq("!", field("name", $.identifier)),
    import_expression: $ => seq("import", field("path", $.string)),
    parenthesized_or_product: $ => choice($.unit_pattern, $.named_product, $.positional_product, $.parenthesized_expression),
    named_shape_pattern: $ => prec(1, seq("{", optional(seq(seq($.named_shape_pattern_field, repeat(seq(",", $.named_shape_pattern_field))), optional(","))), "}")),
    named_shape_pattern_field: $ => seq(".", field("name", $.identifier), optional(choice(seq("=", field("pattern", $._match_pattern)), seq(":", field("type", $.type_reference))))),
    shape_value: $ => prec(2, field("fields", $.shape_field_block)),
    shape_field_block: $ => seq("{", repeat(seq(choice($.shape_field, $.shorthand_field), optional(","))), "}"),
    shape_field: $ => seq(".", field("name", choice($.identifier, "end")), "=", field("value", choice($.shape_nullary_union_case, $._expression))),
    shorthand_field: $ => seq(".", field("name", choice($.identifier, "end"))),
    type_field_block: $ => seq("{", repeat(seq(choice($.type_field, $.named_type_field), optional(","))), "}"),
    type_field: $ => seq(field("name", $.identifier), ":", field("type", $._identifier_type_reference)),
    block: $ => seq("do", repeat(seq($._statement, optional(";"))), "end"),
    parenthesized_expression: $ => seq("(", $._expression, ")"),
    type_reference: $ => $._type_expression,
    _type_expression: $ => choice($.forall_type, $.function_type, $.type_union),
    function_type: $ => prec.right(1, seq(field("parameter", $.type_union), "->", optional(field("effects", $.latent_effect_row)), field("result", $._type_expression))),
    type_union: $ => prec.left(2, choice($.type_intersection, seq(field("left", $.type_union), ":|", field("right", $.type_intersection)))),
    type_intersection: $ => prec.left(3, choice($.type_difference, seq(field("left", $.type_intersection), ":&", field("right", $.type_difference)))),
    type_difference: $ => prec.left(4, choice($._type_application, seq(field("left", $.type_difference), ":-", field("right", $._type_application)))),
    latent_effect_row: $ => seq("<", field("row", $.effect_row), ">"),
    _type_application: $ => choice($.type_application, $._type_prefix),
    type_application: $ => prec.left(5, choice(seq(field("constructor", choice($.type_application, $._type_prefix)), $._type_application_space, field("argument", $._type_prefix)), seq(field("constructor", choice($.type_application, $._type_prefix)), field("argument", $.immediate_type_argument)))),
    _type_prefix: $ => choice($.atom_type, $.frozen_type, $.borrow_type, $._type_atom),
    unit_type: $ => prec(-1, seq("(", ")")),
    wildcard: $ => "_",
    _shape_arrow: $ => prec(100, $._shape_arrow_expression),
    _effect_arrow: $ => prec(100, $._effect_arrow_expression),
    _value_arrow: $ => prec(100, $._value_arrow_expression),
    _effect_identifier_alias: $ => alias($.effect_identifier, $.identifier),
    _fixity_identifier_alias: $ => alias($._fixity_identifier, $.identifier),
    _identifier_type_reference: $ => alias($.identifier, $.type_reference),
    identifier: $ => token(/([A-Za-z][A-Za-z0-9_]{0,1}|[A-Za-df-z][A-Za-z0-9_]{2}|e[A-Za-mo-z0-9_][A-Za-z0-9_]|en[A-Zace-z0-9_]|[A-Za-km-z][A-Za-z0-9_]{3}|l[A-Za-np-z0-9_][A-Za-z0-9_]{2}|lo[A-Za-np-z0-9_][A-Za-z0-9_]|loo[A-Za-oq-z0-9_]|[A-Za-z][A-Za-z0-9_]{4}[A-Za-z0-9_]*)/),
    operator_symbol: $ => token(/([-!$%&*+<>?@\\^|~:][.\-!$%&*+\/<=>?@\\^|~:]*|\/([.\-!$%&*+<=>?@\\^|~:][.\-!$%&*+\/<=>?@\\^|~:]*)?|=[.\-!$%&*+\/<=?@\\^|~:][.\-!$%&*+\/<=>?@\\^|~:]*)/),
    effect_identifier: $ => token(prec(1, /[A-Z][A-Za-z0-9]*/)),
    number: $ => token(/(0[xX][0-9a-fA-F]+([iu][1-9][0-9]*)?|[0-9]+(\.[0-9]+)?([eE][+-]?[0-9]+)?([iu][1-9][0-9]*|f(32|64))?)/),
    string: $ => token(/"([^"\\\n\r]|\\[ntr"\\])*"/),
